# Janus

./: MANIFEST.in  pyJanus.pyi  pyproject.toml
Janus/: pkgcfg.py
Janus/rpy-include/rpygen/: janus__Janus.hpp
Python/: README.md
Python/src/: pyJanusVariable.cpp  pyJanusVariableManager.cpp  pyaString.cpp
Ute/: pkgcfg.py  version.py
pyJanus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
